# hw07-group13

./: .buildinfo  .gitignore  Analysis.ipynb  ExplorationAndVisualization.html  ExplorationAndVisualization.ipynb  LA_Visualizations.html  LICENSE  Main.html  Main.ipynb  MainAnalysis.html  MainAnalysis.ipynb  Makefile  README.md  _config.yml  _toc.yml  bayareadarkdays.geojson  contribution_statement.md  environment.yml  genindex.html  main.ipynb  modelling.html  modelling.ipynb  objects.inv  search.html  searchindex.js  viz_utils.py  weather.csv  wesprojectideas.md
_sources/: LA_Visualizations.ipynb  Main.ipynb  MainAnalysis.ipynb  modelling.ipynb
aqtools/: aqi_breakpoints.csv  aqutils.py  pyproj.toml  setup.cfg  setup.py  viz_utils.py
aqtools/tests/: conftest.py  test_aqutils.py  test_viz_utils.py
data/: CAdarkdays.geojson  bayareadarkdays.geojson  file.json  fillna weather.csv  paramdf  paramdf.pkl  weekstatsdf.pkl
tables/: correlation_ver1.csv  correlation_ver2.csv
