[metadata]
name             = aqtools
author           = Wesley Darling, Gyuhyeon Seo, Ram Kripa, Jae Hee Koh
author_email     = wesley_darling@berkeley.edu
version          = '1.0.0'
description      = A Python library to read explore, visualize, analyze, and model air quality data received from the OpenAQ API.
keywords         = tools, OpenAQ
